--- a/msvc/rtos.vcxproj.filters
+++ b/msvc/rtos.vcxproj.filters
@@ -97,6 +97,9 @@
     <ClInclude Include="..\source\kernel\scheduler\wait_list.hpp">
       <Filter>Header Files\scheduler</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\kernel\scheduler\wait_conditions.hpp">
+      <Filter>Header Files\scheduler</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\st\STM32F10x\startup_stm32f10x_hd.s">
