--- a/keil/rtos.uvprojx
+++ b/keil/rtos.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls>-fno-exceptions</MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\external\arm;..\external\st\STM32F10x;..\source\kernel;..\source\kernel\common;..\source\kernel\event;..\source\kernel\handle;..\source\kernel\scheduler;..\source\kernel\task;..\source\kernel\timer;..\source\kernel\hardware;..\source\kernel\system_timer</IncludePath>
+              <IncludePath>..\external\arm;..\external\st\STM32F10x;..\source\kernel;..\source\kernel\common;..\source\kernel\event;..\source\kernel\handle;..\source\kernel\scheduler;..\source\kernel\task;..\source\kernel\timer;..\source\kernel\hardware;..\source\kernel\system_timer;..\source\kernel\lock</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -396,31 +396,6 @@
               <FileName>kernel.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\source\kernel\kernel.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>timer.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\source\kernel\timer\timer.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>task.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\source\kernel\task\task.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>event.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\source\kernel\event\event.cpp</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>scheduler</GroupName>
-          <Files>
-            <File>
-              <FileName>scheduler.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\source\kernel\scheduler\scheduler.cpp</FilePath>
             </File>
           </Files>
         </Group>
