--- a/examples/waitForMultipleObjects/keil/rtos.uvprojx
+++ b/examples/waitForMultipleObjects/keil/rtos.uvprojx
@@ -338,7 +338,7 @@
               <MiscControls>-fno-exceptions</MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\..\source\;..\..\..\source\common;..\..\..\source\event;..\..\..\source\handle;..\..\..\source\scheduler;..\..\..\source\task;..\..\..\source\timer;..\..\..\source\hardware;..\..\..\source\system_timer;..\..\..\source\lock;..\..\..\source\config;..\..\..\external\arm;..\..\..\external\st\STM32F10x</IncludePath>
+              <IncludePath>..\..\..\source\;..\..\..\external\arm;..\..\..\external\st\STM32F10x</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
