--- a/test/msvc/tests.vcxproj
+++ b/test/msvc/tests.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="..\source\catch.cpp" />
     <ClCompile Include="..\source\kernel\common\circular_list_test.cpp" />
     <ClCompile Include="..\source\kernel\common\memory_buffer_test.cpp" />
+    <ClCompile Include="..\source\kernel\containers\queue_test.cpp" />
     <ClCompile Include="..\source\kernel\handle\handle_test.cpp" />
     <ClCompile Include="..\source\kernel\scheduler\scheduler_test.cpp" />
     <ClCompile Include="..\source\kernel\task\task_test.cpp" />
@@ -106,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\external;..\..\source\;..\..\source\task;..\..\source\scheduler;..\..\source\common;..\..\source\hardware;..\..\source\timer;..\..\source\event;..\..\source\lock;..\..\source\config;..\..\source\handle;..\stubs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\external;..\..\source\;..\..\source\task;..\..\source\scheduler;..\..\source\common;..\..\source\hardware;..\..\source\timer;..\..\source\event;..\..\source\lock;..\..\source\config;..\..\source\handle;..\..\source\containers;..\stubs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalOptions>/D "__attribute__(a)=" /D "always_inline=" /D "weak=" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
