--- a/test/msvc/tests.vcxproj.filters
+++ b/test/msvc/tests.vcxproj.filters
@@ -49,6 +49,12 @@
     <Filter Include="tested files\kernel\timer">
       <UniqueIdentifier>{bb13ca7c-4fe1-464a-8c0b-1bb2b9643972}</UniqueIdentifier>
     </Filter>
+    <Filter Include="tested files\kernel\containers">
+      <UniqueIdentifier>{1050a8e1-ebc3-4f3f-899f-eac961282bad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tests\containers">
+      <UniqueIdentifier>{b129370b-4408-49ec-b1ce-b511cdf8f2cf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\catch.cpp">
@@ -68,6 +74,9 @@
     </ClCompile>
     <ClCompile Include="..\source\kernel\handle\handle_test.cpp">
       <Filter>tests\kernel\handle</Filter>
+    </ClCompile>
+    <ClCompile Include="..\source\kernel\containers\queue_test.cpp">
+      <Filter>tests\containers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
