--- a/msvc/rtos.vcxproj
+++ b/msvc/rtos.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClCompile Include="..\examples\create_task\main.cpp" />
     <ClCompile Include="..\examples\critical_section\main.cpp" />
+    <ClCompile Include="..\examples\serial_interrupt\main.cpp" />
     <ClCompile Include="..\examples\task_sleep\main.cpp" />
     <ClCompile Include="..\examples\using_interrupt\main.cpp" />
     <ClCompile Include="..\examples\waitForMultipleObjects\main.cpp" />
