--- a/msvc/rtos.vcxproj.filters
+++ b/msvc/rtos.vcxproj.filters
@@ -115,6 +115,9 @@
     <ClInclude Include="..\source\scheduler\ready_list.hpp">
       <Filter>Header Files\scheduler</Filter>
     </ClInclude>
+    <ClInclude Include="..\source\queue\queue.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\external\st\STM32F10x\startup_stm32f10x_hd.s">
