--- a/test/msvc/tests.vcxproj
+++ b/test/msvc/tests.vcxproj
@@ -22,7 +22,6 @@
     <ClCompile Include="..\source\catch.cpp" />
     <ClCompile Include="..\source\kernel\common\circular_list_test.cpp" />
     <ClCompile Include="..\source\kernel\common\memory_buffer_test.cpp" />
-    <ClCompile Include="..\source\kernel\containers\queue_test.cpp" />
     <ClCompile Include="..\source\kernel\handle\handle_test.cpp" />
     <ClCompile Include="..\source\kernel\scheduler\scheduler_test.cpp" />
     <ClCompile Include="..\source\kernel\task\task_test.cpp" />
@@ -30,7 +29,6 @@
   <ItemGroup>
     <ClInclude Include="..\..\source\common\circular_list.hpp" />
     <ClInclude Include="..\..\source\common\memory_buffer.hpp" />
-    <ClInclude Include="..\..\source\containers\queue.hpp" />
     <ClInclude Include="..\..\source\event\event.hpp" />
     <ClInclude Include="..\..\source\scheduler\scheduler.hpp" />
     <ClInclude Include="..\..\source\task\task.hpp" />
@@ -108,7 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\external;..\..\source\;..\..\source\task;..\..\source\scheduler;..\..\source\common;..\..\source\hardware;..\..\source\timer;..\..\source\event;..\..\source\lock;..\..\source\config;..\..\source\handle;..\..\source\containers;..\stubs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\external;..\..\source\;..\..\source\task;..\..\source\scheduler;..\..\source\common;..\..\source\hardware;..\..\source\timer;..\..\source\event;..\..\source\lock;..\..\source\config;..\..\source\handle;..\stubs;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalOptions>/D "__attribute__(a)=" /D "always_inline=" /D "weak=" %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
