--- a/msvc/rtos.vcxproj.filters
+++ b/msvc/rtos.vcxproj.filters
@@ -45,6 +45,9 @@
     <Filter Include="examples\serial_interrupt">
       <UniqueIdentifier>{b5061237-41da-46b6-8c5a-86ed6db15674}</UniqueIdentifier>
     </Filter>
+    <Filter Include="examples\software_timers">
+      <UniqueIdentifier>{98e16da7-f5bd-4084-852b-5eebe64ce72d}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\kernel.cpp">
@@ -73,6 +76,9 @@
     </ClCompile>
     <ClCompile Include="..\examples\serial_interrupt\main.cpp">
       <Filter>examples\serial_interrupt</Filter>
+    </ClCompile>
+    <ClCompile Include="..\examples\software_timers\main.cpp">
+      <Filter>examples\software_timers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
